--- a/privacy.html
+++ b/privacy.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="facebook-domain-verification" content="wjvx5qowdqze047elsz64wn878tg2v" />
     <title>Privacy Policy - CV APRESIA ADIMATRA</title>
     <style>
         * {
